--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+
 
 *{
     margin: 0;
@@ -54,7 +56,7 @@ header{
     flex-direction: column;
     width: 100%;
     height: 100%;
-    background-color: rgba(60, 0, 0, 0.76);
+    background-color: rgba(0, 0, 0, 0.719);
 }
 
 header video{
@@ -75,4 +77,46 @@ header video{
 
 .container-global-home p{
     font-size: 1.2rem;
+}
+.container-global-home button{
+    background-color: rgb(255, 255, 255);
+    border: none;
+    height: 50px;
+    width: 150px;
+    padding: 10px;
+    border-radius: 30px;
+    margin-top: 20px;
+    font-size: 1.1rem;
+    cursor: pointer;
+}
+
+.container-apresentacao{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: rgb(248, 248, 248);
+    font-size: 1.5rem; 
+    font-family: "DM Sans", sans-serif;
+    text-align: center;
+}
+.container-apresentacao p{
+    margin: 40px;
+    color: rgb(122, 122, 122);
+    width: 70%;
+}
+
+.principais-fotos{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgb(248, 248, 248);
+    height: 80vh;
+    overflow: hidden;
+}
+.principais-fotos img{
+    background-color: bisque;
+    height: 100%;
+    width: 32.5%;
+    object-fit: cover;
 }
