--- a/css/galeria.css
+++ b/css/galeria.css
@@ -9,7 +9,7 @@
     font-family: "Poppins", sans-serif;
 }
 
-.galeria-fotos h2, h3{
+.galeria-fotos h2, .galeria-fotos h3{
     font-family: "Bebas Neue", sans-serif;
     margin-left: 30px;
 }
