--- a/css/projeto.css
+++ b/css/projeto.css
@@ -11,9 +11,38 @@
 }
 
 .projetos{
-    padding-top: 80px;
-    height: 100vh;
-    background-color: #f9f9f9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding-top: 80px;
+  height: 100%;
+  background-color: #f9f9f9;
+  background: url(https://img.freepik.com/fotos-premium/fumaca-preta-em-fundo-vermelho-abstracto-imagem-textura-padrao-papel-de-parede-coberta-e-ecra_867671-34007.jpg?ga=GA1.1.1929563771.1745160932&semt=ais_hybrid&w=740);
+  background-size: cover;
+  color: rgb(255, 255, 255);
+  padding-bottom: 20px;
+}
+
+.container-miss-sp{
+  text-align: center;
+  width: 50%;
+}
+.container-miss-sp h3{
+  font-size: 2rem;
+  border-bottom: 1px solid white;
+  margin-bottom: 20px;
+}
+.container-miss-sp h4{
+  margin-bottom: 40px;
+  font-size: 1.4rem;
+}
+
+.img-container-miss img{
+  width: 250px;
+  height: 400px;
+  object-fit: cover;
+  border-radius: 20px;
 }
 
 .container-projetos{
@@ -39,18 +68,15 @@
     margin-bottom: 20px;
 }
 
-
-
-
-
-
-
 .carousel-wrapper {
     position: relative;
     overflow: hidden;
     width: 100%;
     max-width: 800px;
     margin: 0 auto;
+    color: black;
+    background-color: #ffffffb2;
+    margin: 80px auto;
   }
   
   .carousel-track {
@@ -98,4 +124,19 @@
   }
   .prev:hover, .next:hover{
     font-size: 4.4rem;
+  }
+  .curso-danca{
+    text-align: center;
+  }
+  .curso-danca .container-descricao{
+    background-color: rgba(255, 255, 255, 0.637);
+    padding: 20px;
+    color: black;
+  }
+  .curso-danca .container-descricao h3{
+    font-size: 2rem;
+    margin-bottom: 20px;
+  }
+  .curso-danca .container-descricao ul li{
+    list-style: none;
   }
