--- a/css/destaques.css
+++ b/css/destaques.css
@@ -13,12 +13,29 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-bottom: 100px;
 }
 
 .container-destaques{
-    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.container-videos{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 2rem;
 }
 .container-destaques h2{
     font-size: 3rem;
     font-family: "Bebas Neue", sans-serif;
+    padding: 60px 0;
+}
+
+.container-destaques video{
+    width: 300px;
+    height: 600px;
+    object-fit: cover;
+    cursor: pointer;
 }
