--- a/css/projeto.css
+++ b/css/projeto.css
@@ -20,6 +20,8 @@
   background-color: #f9f9f9;
   background: url(https://img.freepik.com/fotos-premium/fumaca-preta-em-fundo-vermelho-abstracto-imagem-textura-padrao-papel-de-parede-coberta-e-ecra_867671-34007.jpg?ga=GA1.1.1929563771.1745160932&semt=ais_hybrid&w=740);
   background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
   color: rgb(255, 255, 255);
   padding-bottom: 90px;
 }
