--- a/css/destaques.css
+++ b/css/destaques.css
@@ -65,7 +65,6 @@
   display: flex;
   flex-wrap: wrap;
   gap: 16px;
-  background-color: aquamarine;
 }
 
 .container-videos video {
@@ -85,6 +84,14 @@
     height: 100%;
     padding-bottom: 50px;
   }
+  .destaques h2{
+    padding-top: 40px;
+    margin-bottom: -60px;
+  }
+  .container-videos{
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 
@@ -101,8 +108,8 @@
 
   .container-videos {
     flex-wrap: nowrap;
-    align-items: none;
-    justify-content: none;
+    align-items: stretch;
+    justify-content: flex-start;
     overflow-x: auto;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
