--- a/css/contato.css
+++ b/css/contato.css
@@ -23,6 +23,7 @@
     font-family:  "Bebas Neue", sans-serif;
     font-size: 2rem;
     text-align: center;
+    margin: 0px 35px;
 }
 .container-icons-contato{
     display: flex;
