--- a/css/galeria.css
+++ b/css/galeria.css
@@ -64,11 +64,16 @@
   .container-galeria-fotos-outras {
     grid-template-columns: repeat(3, 1fr);
   }
+  
 }
 
 @media (max-width: 800px) {
   .container-galeria-fotos-outras {
     grid-template-columns: repeat(2, 1fr);
+  }
+  .galeria-fotos h2{
+    font-size: 5rem;
+    width: 90%;
   }
 }
 
